--- a/inst/htmlwidgets/vivagRaph.yaml
+++ b/inst/htmlwidgets/vivagRaph.yaml
@@ -2,12 +2,4 @@ dependencies:
   - name: vivagraph
     version: 0.5.8
     src: htmlwidgets/lib/vivagraph
-    script: vivagraph.min.js
-    
-  - name: jquery
-    version: 2.1.1
-    src: htmlwidgets/lib/jquery
-    script: jquery.min.js
-
-
-
+    script: vivagraph.js
