--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,7 @@ Title: Interactive newtork plots using VivaGraph javascript library.
 Version: 0.2.0
 Authors@R: c(
 	person("Kenton", "Russell", role='ctb'),
-	person("Keegan", "Hines", role=c('aut','cre'))
-)
-Maintainer: Keegan Hines <keegan.hines@gmail.com>
+	person("Keegan", "Hines", role=c('aut','cre'),email='keegan.hines@gmail.com' ))
 Depends: R (>= 3.1.1)
-Imports:
-	htmlwidgets
-	jsonlite
 License: MIT
 LazyData: true
