--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,5 +5,8 @@ Authors@R: c(
 	person("Kenton", "Russell", role='ctb'),
 	person("Keegan", "Hines", role=c('aut','cre'),email='keegan.hines@gmail.com' ))
 Depends: R (>= 3.1.1)
+Imports:
+	htmlwidgets,
+	jsonlite
 License: MIT
 LazyData: true
